--- a/VoicePay/App.xaml
+++ b/VoicePay/App.xaml
@@ -1,6 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="VoicePay.App">
 	<Application.Resources>
-		<!-- Application resource dictionary -->
+		<ResourceDictionary>
+            
+            <Color x:Key="Primary">#009688</Color>
+            <Color x:Key="PrimaryDark">#00796B</Color>
+            <Color x:Key="Accent">#FFC107</Color>
+
+            <!-- Default label style -->
+            <Style TargetType="Label">
+                <Setter Property="TextColor" Value="#212121" />
+            </Style>
+
+            <!-- Font families -->
+            <OnPlatform x:Key="RegularFontFamily" x:TypeArguments="x:String">
+                <On Platform="iOS">HelveticaNeue</On>
+                <On Platform="Android">sans-serif</On>
+            </OnPlatform>
+
+            <OnPlatform x:Key="LightFontFamily" x:TypeArguments="x:String">
+                <On Platform="iOS">HelveticaNeue-Light</On>
+                <On Platform="Android">sans-serif-light</On>
+            </OnPlatform>
+
+            <OnPlatform x:Key="MediumFontFamily" x:TypeArguments="x:String">
+                <On Platform="iOS">HelveticaNeue-Medium</On>
+                <On Platform="Android">sans-serif-medium</On>
+            </OnPlatform>
+        </ResourceDictionary>
 	</Application.Resources>
 </Application>
