--- a/VoicePay/Views/Enrollment/WelcomePage.xaml
+++ b/VoicePay/Views/Enrollment/WelcomePage.xaml
@@ -29,8 +29,8 @@
                     <Label Text="Cuando estés listo, selecciona el botón 'Iniciar' y empieza a hablar con ella." FontSize="16" Margin="0,0,0,10" HorizontalTextAlignment="Center" />
                     <Label Text="Haciendo esto, nuestra asistente podrá identificar tu voz para autorizar tus compras dentro de la aplicación." FontSize="16" HorizontalTextAlignment="Center" />
                 </StackLayout>
-                <Button Text="Salir" Grid.Row="1" Command="{Binding GoBackCommand}" BackgroundColor="Transparent" HorizontalOptions="Start" WidthRequest="130" TextColor="{StaticResource Primary}" Margin="8"/>
-                <Button Text="Iniciar" Grid.Row="1" Grid.Column="1" Command="{Binding CheckAndGoCommand}"  BackgroundColor="{StaticResource Primary}" TextColor="White" WidthRequest="130" HorizontalOptions="EndAndExpand" Margin="8" />
+                <Button Text="Verificar" Grid.Row="1" Command="{Binding CheckAndGoVerifyCommand}" BackgroundColor="Transparent" HorizontalOptions="Start" WidthRequest="130" TextColor="{StaticResource Primary}" Margin="8"/>
+                <Button Text="Entrenar" Grid.Row="1" Grid.Column="1" Command="{Binding CheckAndGoTrainCommand}"  BackgroundColor="{StaticResource Primary}" TextColor="White" WidthRequest="130" HorizontalOptions="EndAndExpand" Margin="8" />
             </Grid>
         </ScrollView>
     </ContentPage.Content>
