--- a/VoicePay/App.xaml
+++ b/VoicePay/App.xaml
@@ -13,6 +13,11 @@
                 <Setter Property="TextColor" Value="#212121" />
             </Style>
 
+            <Style x:Key="PrimaryBtn" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource Primary}"/>
+                <Setter Property="TextColor" Value="White" />
+            </Style>
+
             <!-- Font families -->
             <OnPlatform x:Key="RegularFontFamily" x:TypeArguments="x:String">
                 <On Platform="iOS">HelveticaNeue</On>
