--- a/VoicePay/Views/Enrollment/IncorrectResultPage.xaml
+++ b/VoicePay/Views/Enrollment/IncorrectResultPage.xaml
@@ -15,12 +15,12 @@
                 HorizontalOptions="FillAndExpand" 
                 Loop="true"/>
             <StackLayout VerticalOptions="End">
-                <Label Text="No hemos reconocido tu voz" 
+                <Label Text="We couldn't verify your voice" 
                     HorizontalTextAlignment="Center"
                     TextColor="{StaticResource Accent2}"
                     FontSize="26"
                     Margin="16,0,16,10"/>
-                <Button Text="Continuar" Clicked="Handle_Clicked" BackgroundColor="{StaticResource Accent2}" TextColor="White" />
+                <Button Text="Next" Clicked="Handle_Clicked" BackgroundColor="{StaticResource Accent2}" TextColor="White" />
             </StackLayout>
         </Grid>
 	</ContentPage.Content>
