--- a/VoicePay/Views/Enrollment/SelectPhrasePage.xaml
+++ b/VoicePay/Views/Enrollment/SelectPhrasePage.xaml
@@ -5,7 +5,7 @@
         xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
         xmlns:tkt="clr-namespace:FormsToolkit;assembly=FormsToolkit"
         x:Class="VoicePay.Views.Enrollment.SelectPhrasePage"
-        Title="Selección de frase">
+        Title="Phrase selection">
     
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -31,8 +31,8 @@
                       IsVisible="{Binding Path=IsBusy, Converter={StaticResource InvertedBooleanConverter}}">
                 <ListView.Header>
                     <StackLayout Spacing="0" Padding="16,20,16,16">
-                        <Label Text="Escoge una frase" FontSize="20"/>
-                        <Label Text="La frase que escojas será utilizada para el siguiente paso:" />
+                        <Label Text="Choose a phrase" FontSize="20"/>
+                        <Label Text="The phrase you choose will be used in the next step." />
                     </StackLayout>
                 </ListView.Header>
                 <ListView.ItemTemplate>
