--- a/VoicePay/Views/Enrollment/WelcomePage.xaml
+++ b/VoicePay/Views/Enrollment/WelcomePage.xaml
@@ -25,12 +25,12 @@
                 
                 <StackLayout Grid.ColumnSpan="2" VerticalOptions="StartAndExpand" Margin="24,40,24,0">
                     <Image Source="microphone_black.png" WidthRequest="80" HeightRequest="80" />
-                    <Label Text="¡Hola! Enséñale a nuestra asistente a reconocer tu voz" FontSize="26" Margin="0,0,0,10" HorizontalTextAlignment="Center" />
-                    <Label Text="Cuando estés listo, selecciona el botón 'Iniciar' y empieza a hablar con ella." FontSize="16" Margin="0,0,0,10" HorizontalTextAlignment="Center" />
-                    <Label Text="Haciendo esto, nuestra asistente podrá identificar tu voz para autorizar tus compras dentro de la aplicación." FontSize="16" HorizontalTextAlignment="Center" />
+                    <Label Text="Hi there! Teach our assistant to recognize your voice" FontSize="26" Margin="0,0,0,10" HorizontalTextAlignment="Center" />
+                    <Label Text="Press 'Train' when you are ready to go" FontSize="16" Margin="0,0,0,10" HorizontalTextAlignment="Center" />
+                    <Label Text="After that, we will be able to use your voice to authorize your purchases inside the app." FontSize="16" HorizontalTextAlignment="Center" />
                 </StackLayout>
-                <Button Text="Verificar" Grid.Row="1" Command="{Binding CheckAndGoVerifyCommand}" BackgroundColor="Transparent" HorizontalOptions="Start" WidthRequest="130" TextColor="{StaticResource Primary}" Margin="8"/>
-                <Button Text="Entrenar" Grid.Row="1" Grid.Column="1" Command="{Binding CheckAndGoTrainCommand}"  BackgroundColor="{StaticResource Primary}" TextColor="White" WidthRequest="130" HorizontalOptions="EndAndExpand" Margin="8" />
+                <Button Text="Verify" Grid.Row="1" Command="{Binding CheckAndGoVerifyCommand}" BackgroundColor="Transparent" HorizontalOptions="Start" WidthRequest="130" TextColor="{StaticResource Primary}" Margin="8"/>
+                <Button Text="Train" Grid.Row="1" Grid.Column="1" Command="{Binding CheckAndGoTrainCommand}"  Style="{StaticResource PrimaryBtn}" WidthRequest="130" HorizontalOptions="EndAndExpand" Margin="8" />
             </Grid>
         </ScrollView>
     </ContentPage.Content>
