--- a/VoicePay/Views/Store/CartReviewPage.xaml
+++ b/VoicePay/Views/Store/CartReviewPage.xaml
@@ -49,7 +49,7 @@
                     </Grid>
                 </ListView.Footer>
             </ListView>
-            <Button Grid.Row="1" Text="Pay now" Style="{StaticResource PrimaryBtn}"/>
+            <Button Grid.Row="1" Text="Pay now" Style="{StaticResource PrimaryBtn}" Command="{Binding GoAndPayCommand}"/>
         </Grid>
 	</ContentPage.Content>
 </ContentPage>
